--- a/home.html
+++ b/home.html
@@ -21,6 +21,39 @@
     />
   </head>
   <body>
+    <!-- -----------module--------- -->
+    <section class="overlay-module"></section>
+    <section class="menuBar-module">
+      <div class="menu-element">
+        <div class="x-icon">
+          <i class="fa-brands fa-xbox"></i>
+        </div>
+        <div class="menu-part">
+          <div class="mobile-image">
+            <img src="./images/logo/globalAptek.png" alt="logo mobile" />
+          </div>
+          <h3>Global Aptek</h3>
+          <div class="contact-info-in-menuBar">
+            <a
+              class="location"
+              target="_blank"
+              href="https://www.google.com/maps/@40.3856828,49.8203016,15z?entry=ttu"
+            >
+              <i class="fa-solid fa-location-dot"></i>
+              <p>Ünvanlar</p>
+            </a>
+            <a href="callto:*7788">
+              <i class="fa-solid fa-phone"></i>
+              <p>*7788</p>
+            </a>
+            <a target="_blank" href="mailto:globalAptek@gmail">
+              <i class="fa-solid fa-envelope"></i>
+              <p>globalAptek@gmail.com</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ----------header--------- -->
     <header>
       <!-- ---------up-side-in-header------- -->
@@ -168,7 +201,7 @@
           <div class="slider-container"></div>
         </div>
       </section>
-      <!-- --------------dostors--------- -->
+      <!-- --------------doctors--------- -->
       <section class="doctors-container">
         <div class="doctors-element">
           <!-- -------left-side------ -->
@@ -177,6 +210,13 @@
           </ul>
           <!-- -------right-side------ -->
           <ul class="right-side-doctors"></ul>
+        </div>
+      </section>
+      <!-- ----------------healty-notes------------- -->
+      <section class="healty-notes-container">
+        <div class="healty-notes-element">
+          <h3>Sağlamlıq Qeydləri</h3>
+          <ul class="healty-notes"></ul>
         </div>
       </section>
     </main>
