--- a/home.html
+++ b/home.html
@@ -140,7 +140,13 @@
           </div>
           <div class="search-part">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" name="search" id="search" placeholder="Axtar" />
+            <input
+              class="search-element"
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Axtar"
+            />
           </div>
         </div>
       </div>
